# cs2n-orcid-affiliation-resolver

./: justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: image-dev.yaml
scripts/: pl_orcid_01_resolve_city.py  pl_orcid_02_resolve_org.py
