[project]
name = "cs2n-orcid-affiliation-resolver"
version = "0.0.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
