[project]
name = "cs2n_orcid_affiliation_resolver"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "rapidfuzz>=3.14.5",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
